add github-action, dockerfike, docker-compose.yml
